8146793: logStream::write re-formats string

Eliminate re-format, add warning attribute, fix size check, fix va_list usage.

Reviewed-by: mlarsson, rprotacio, jrose